--- a/OTEx1.ipynb
+++ b/OTEx1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://gist.github.com/luchi1714/adf940694a383cd07413869a1e2d94ae#file-otex1-ipynb",
-      "authorship_tag": "ABX9TyOeh4O4n27Muq271gaCagCx",
+      "authorship_tag": "ABX9TyMTxdcY2zUrUtprbQdBiTUe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       },
       "source": [
         "import scipy.io as sio\n",
-        "import timeit\n",
+        "import time\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.decomposition import PCA\n",
         "import numpy as np\n",
@@ -61,7 +61,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -71,13 +71,14 @@
       },
       "source": [
         "def subspace_alignment(dataS,dataT, pca_components):\n",
-        "\"\"\"\n",
-        "    dataS = source Data \n",
-        "    dataT = Target Data \n",
-        "    pca_components = number of components you want to extract from pca \n",
-        "\"\"\"\n",
         "\n",
-        "    pca_components = 100\n",
+        "    # dataS = source Data \n",
+        "    # dataT = Target Data \n",
+        "    # pca_components = number of components you want to extract from pca \n",
+        "\n",
+        "    \n",
+        "\n",
+        "    \n",
         "    S = dataS[\"fts\"].astype(float)\n",
         "    T = dataT[\"fts\"].astype(float)\n",
         "    Sl = dataS[\"labels\"].ravel()\n",
@@ -98,9 +99,9 @@
         "    # PCA Related stuff \n",
         "    pca = PCA(pca_components)\n",
         "    pca_Xs = pca.fit(S)\n",
-        "    Xs =np.transpose(pca_Xs.components_)[:, :pca_components] #pca.components_\n",
+        "    Xs =np.transpose(pca_Xs.components_)#[:, :pca_components] \n",
         "    pca_Xt = pca.fit(T)\n",
-        "    Xt = np.transpose(pca_Xt.components_)[:, :pca_components]\n",
+        "    Xt = np.transpose(pca_Xt.components_)#[:, :pca_components]\n",
         "     \n",
         "    \n",
         "    M = np.dot(Xs, Xs.T)\n",
@@ -111,26 +112,26 @@
         "    nn = KNeighborsClassifier(n_neighbors=1).fit(Sa, Sl)\n",
         "    \n",
         "    \n",
-        "    start = timeit.timeit()\n",
+        "    start =time.time()\n",
         "\n",
         "    predection  = nn.predict(Ta)\n",
         "     \n",
         "    #Checking performance with Subspace Alignment \n",
         "    print('Accuracy of subspace_alignment : {:.2f}'.format(metrics.accuracy_score(Tl, predection)))\n",
-        "    end = timeit.timeit()\n",
+        "    end = time.time()\n",
         "    print(\" Time elapsed : {}\" .format(end - start))\n",
         "   \n",
         "   \n",
         "    #Checking performance on the with  knn \n",
-        "    start = timeit.timeit()\n",
+        "    start = time.time()\n",
         "    nn = KNeighborsClassifier(n_neighbors=1).fit(S, Sl)\n",
         "    predection_nn  = nn.predict(T)\n",
         "    print('Accuracy of K-NN: {:.2f}'.format(metrics.accuracy_score(Tl,  predection_nn )))\n",
-        "    end = timeit.timeit()\n",
+        "    end = time.time()\n",
         "    print(\" Time elapsed : {}\" .format( end - start))\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -145,32 +146,34 @@
         "\n",
         "directory_path = \"/content/drive/MyDrive/ML/Data_Folder\"\n"
       ],
-      "execution_count": 3,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wFP6ijNZz81d",
-        "outputId": "27073b9e-ce1d-45e7-84f5-40152fe7ab92",
+        "outputId": "d279dbcd-60a4-4b24-9b90-99e1c874c8b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "\n",
         "for i in folders:\n",
         "    j = 0\n",
-        "    print(\" \\t\\t\\t\\t{}                      \".format(i.capitalize()))\n",
+        "    print(\" \\t\\t\\t\\t\\t\\t{}                      \".format(i.capitalize()))\n",
         "    while(j < 3):\n",
-        "        dataS = (directory_path+\"/{}/{}.mat\".format(i,files[j]))\n",
+        "        dataS = (directory_path+\"/{0}/{1}.mat\".format(i,files[j]))\n",
         "        j = j +1\n",
-        "        dataT = (directory_path+\"/{}/{}.mat\".format(i,files[j]))\n",
+        "        dataT = (directory_path+\"/{0}/{1}.mat\".format(i,files[j]))\n",
         "        \n",
         "        \n",
         "        print(\"*\" *60)\n",
         "       \n",
         "        print(files[j-1].capitalize() +\" vs \"+files[j].capitalize()+ \" \\n\")\n",
+        "        print(dataS)\n",
+        "        print(dataT)\n",
+        "        print(\"\\n\\n\")\n",
         "       \n",
         "        data_1 = sio.loadmat(\"{}\".format(dataS))\n",
         "        data_2 = sio.loadmat(\"{}\".format(dataT))\n",
@@ -180,7 +183,7 @@
         "        j = j +1\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,51 +192,92 @@
             "************************************************************\n",
             "Webcam vs Dslr \n",
             "\n",
-            "Accuracy of subspace_alignment : 0.91\n",
-            " Time elapsed : -0.00018390299999282433\n",
+            "/content/drive/MyDrive/ML/Data_Folder/surf/webcam.mat\n",
+            "/content/drive/MyDrive/ML/Data_Folder/surf/dslr.mat\n",
+            "\n",
+            "\n",
+            "\n",
+            "Accuracy of subspace_alignment : 0.90\n",
+            " Time elapsed : 0.023242712020874023\n",
             "Accuracy of K-NN: 0.31\n",
-            " Time elapsed : -0.0054008879999969395\n",
+            " Time elapsed : 0.13263297080993652\n",
             "************************************************************\n",
             "Caltech10 vs Amazon \n",
             "\n",
+            "/content/drive/MyDrive/ML/Data_Folder/surf/caltech10.mat\n",
+            "/content/drive/MyDrive/ML/Data_Folder/surf/amazon.mat\n",
+            "\n",
+            "\n",
+            "\n",
             "Accuracy of subspace_alignment : 0.42\n",
-            " Time elapsed : -0.00860881800002744\n",
+            " Time elapsed : 0.31349992752075195\n",
             "Accuracy of K-NN: 0.18\n",
-            " Time elapsed : 0.0004003640000860287\n",
+            " Time elapsed : 2.2964935302734375\n",
             " \t\t\t\t\t\tGooglenet1024                      \n",
             "************************************************************\n",
             "Webcam vs Dslr \n",
             "\n",
+            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/webcam.mat\n",
+            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/dslr.mat\n",
+            "\n",
+            "\n",
+            "\n",
             "Accuracy of subspace_alignment : 0.99\n",
-            " Time elapsed : 0.0003291730000114512\n",
+            " Time elapsed : 0.017736196517944336\n",
             "Accuracy of K-NN: 0.99\n",
-            " Time elapsed : -0.008793447000073229\n",
+            " Time elapsed : 0.15322613716125488\n",
             "************************************************************\n",
             "Caltech10 vs Amazon \n",
             "\n",
+            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/caltech10.mat\n",
+            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/amazon.mat\n",
+            "\n",
+            "\n",
+            "\n",
             "Accuracy of subspace_alignment : 0.92\n",
-            " Time elapsed : -0.008287090999999691\n",
+            " Time elapsed : 0.21831750869750977\n",
             "Accuracy of K-NN: 0.92\n",
-            " Time elapsed : 0.00032386600003064814\n",
+            " Time elapsed : 2.7539641857147217\n",
             " \t\t\t\t\t\tCaffenet4096                      \n",
             "************************************************************\n",
             "Webcam vs Dslr \n",
             "\n",
+            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/webcam.mat\n",
+            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/dslr.mat\n",
+            "\n",
+            "\n",
+            "\n",
             "Accuracy of subspace_alignment : 1.00\n",
-            " Time elapsed : -6.465000012667588e-06\n",
+            " Time elapsed : 0.01845526695251465\n",
             "Accuracy of K-NN: 0.96\n",
-            " Time elapsed : -0.007607912999958444\n",
+            " Time elapsed : 0.6020116806030273\n",
             "************************************************************\n",
             "Caltech10 vs Amazon \n",
             "\n",
+            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/caltech10.mat\n",
+            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/amazon.mat\n",
+            "\n",
+            "\n",
+            "\n",
             "Accuracy of subspace_alignment : 0.88\n",
-            " Time elapsed : -0.008393238999985897\n",
+            " Time elapsed : 0.24698829650878906\n",
             "Accuracy of K-NN: 0.88\n",
-            " Time elapsed : -0.00027055499998596133\n"
+            " Time elapsed : 11.949267864227295\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fErWIY459Dh2"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
