--- a/Entropic_regularized_Optimal_transport.ipynb
+++ b/Entropic_regularized_Optimal_transport.ipynb
@@ -5,9 +5,10 @@
     "colab": {
       "name": "Entropic regularized Optimal transport.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1RQO-vqaJcCW3RkvbTE_z5JBdinvkwUB-",
-      "authorship_tag": "ABX9TyPDJ5LP9hJiHAZMMIA9ljQP",
+      "authorship_tag": "ABX9TyPF785WTEDFPCl+v0jOCmVY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +31,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "sdJiF7zdn0qP",
-        "outputId": "e4c47b8f-d654-4ebe-b39c-f054a968f4b2",
+        "outputId": "abb1850b-8322-480b-a100-000c3284b230",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -38,19 +39,15 @@
       "source": [
         "pip install Pot"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting Pot\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f8/22/67658e4b227fc52ce1c9bca522dfb3f0cc29a3536d1c7499feb3b0042a41/POT-0.7.0-cp36-cp36m-manylinux2010_x86_64.whl (428kB)\n",
-            "\r\u001b[K     |▊                               | 10kB 12.8MB/s eta 0:00:01\r\u001b[K     |█▌                              | 20kB 15.2MB/s eta 0:00:01\r\u001b[K     |██▎                             | 30kB 12.8MB/s eta 0:00:01\r\u001b[K     |███                             | 40kB 7.7MB/s eta 0:00:01\r\u001b[K     |███▉                            | 51kB 4.1MB/s eta 0:00:01\r\u001b[K     |████▋                           | 61kB 4.5MB/s eta 0:00:01\r\u001b[K     |█████▍                          | 71kB 4.9MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 81kB 5.3MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 92kB 5.3MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 102kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████▍                       | 112kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 122kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████                      | 133kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████▊                     | 143kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 153kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 163kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 174kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 184kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████████▌                 | 194kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 204kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████                | 215kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████▉               | 225kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 235kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 245kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 256kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 266kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 276kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████▍          | 286kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 296kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 307kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▊        | 317kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 327kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▏      | 337kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 348kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 358kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 368kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 378kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 389kB 5.7MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▉  | 399kB 5.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 409kB 5.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▎| 419kB 5.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 430kB 5.7MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.16 in /usr/local/lib/python3.6/dist-packages (from Pot) (1.18.5)\n",
-            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.6/dist-packages (from Pot) (1.4.1)\n",
+            "Requirement already satisfied: Pot in /usr/local/lib/python3.6/dist-packages (0.7.0)\n",
+            "Requirement already satisfied: numpy>=1.16 in /usr/local/lib/python3.6/dist-packages (from Pot) (1.18.5)\n",
             "Requirement already satisfied: cython>=0.23 in /usr/local/lib/python3.6/dist-packages (from Pot) (0.29.21)\n",
-            "Installing collected packages: Pot\n",
-            "Successfully installed Pot-0.7.0\n"
+            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.6/dist-packages (from Pot) (1.4.1)\n"
           ],
           "name": "stdout"
         }
@@ -79,9 +76,10 @@
         "import scipy\n",
         "from sklearn.preprocessing import normalize\n",
         "import  ot \n",
+        "import time\n",
         "from sklearn.neighbors import KNeighborsClassifier\n"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -123,11 +121,14 @@
         "    \n",
         "    #Checking performance on the source set\n",
         "    print('Accuracy of K-NN classifier on Source set: {:.2f}'.format(nn.score(S, Ls)))\n",
+        "    start = time.time()\n",
         "    #Checking performance on the target set\n",
         "    print('Accuracy of K-NN classifier on Target set: {:.2f}'.format(nn.score(T, Tl)))\n",
+        "    end = time.time()\n",
+        "    print(\" Time : {}\".format(end-start))\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -142,14 +143,14 @@
         "\n",
         "directory_path = \"/content/drive/MyDrive/ML/Data_Folder\"\n"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-nC90fD8oULL",
-        "outputId": "b22b2de6-afd1-4123-8584-11376b454e14",
+        "outputId": "c7a27cc4-f859-4399-ac0a-c1b42305b8d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -179,74 +180,68 @@
         "        j = j +1\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            " \t\t\t\t\t\tSurf                      \n",
+            " \t\t\t\tSurf                      \n",
             "************************************************************\n",
             "Webcam vs Dslr \n",
             "\n",
-            "/content/drive/MyDrive/ML/Data_Folder/surf/webcam.mat\n",
-            "/content/drive/MyDrive/ML/Data_Folder/surf/dslr.mat\n",
             "\n",
             "\n",
             "\n",
             "Accuracy of K-NN classifier on Source set: 0.85\n",
             "Accuracy of K-NN classifier on Target set: 0.73\n",
+            " Time : 0.06956052780151367\n",
             "************************************************************\n",
             "Caltech10 vs Amazon \n",
             "\n",
-            "/content/drive/MyDrive/ML/Data_Folder/surf/caltech10.mat\n",
-            "/content/drive/MyDrive/ML/Data_Folder/surf/amazon.mat\n",
             "\n",
             "\n",
             "\n",
             "Accuracy of K-NN classifier on Source set: 0.47\n",
             "Accuracy of K-NN classifier on Target set: 0.29\n",
-            " \t\t\t\t\t\tGooglenet1024                      \n",
+            " Time : 1.2560033798217773\n",
+            " \t\t\t\tGooglenet1024                      \n",
             "************************************************************\n",
             "Webcam vs Dslr \n",
             "\n",
-            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/webcam.mat\n",
-            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/dslr.mat\n",
             "\n",
             "\n",
             "\n",
             "Accuracy of K-NN classifier on Source set: 0.94\n",
             "Accuracy of K-NN classifier on Target set: 0.96\n",
+            " Time : 0.06204533576965332\n",
             "************************************************************\n",
             "Caltech10 vs Amazon \n",
             "\n",
-            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/caltech10.mat\n",
-            "/content/drive/MyDrive/ML/Data_Folder/GoogleNet1024/amazon.mat\n",
             "\n",
             "\n",
             "\n",
             "Accuracy of K-NN classifier on Source set: 0.91\n",
             "Accuracy of K-NN classifier on Target set: 0.95\n",
-            " \t\t\t\t\t\tCaffenet4096                      \n",
+            " Time : 0.809943437576294\n",
+            " \t\t\t\tCaffenet4096                      \n",
             "************************************************************\n",
             "Webcam vs Dslr \n",
             "\n",
-            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/webcam.mat\n",
-            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/dslr.mat\n",
             "\n",
             "\n",
             "\n",
             "Accuracy of K-NN classifier on Source set: 0.95\n",
             "Accuracy of K-NN classifier on Target set: 0.99\n",
+            " Time : 0.22714710235595703\n",
             "************************************************************\n",
             "Caltech10 vs Amazon \n",
             "\n",
-            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/caltech10.mat\n",
-            "/content/drive/MyDrive/ML/Data_Folder/CaffeNet4096/amazon.mat\n",
             "\n",
             "\n",
             "\n",
             "Accuracy of K-NN classifier on Source set: 0.84\n",
-            "Accuracy of K-NN classifier on Target set: 0.89\n"
+            "Accuracy of K-NN classifier on Target set: 0.89\n",
+            " Time : 3.894416093826294\n"
           ],
           "name": "stdout"
         }
